# binspire

./: .gitignore  .npmrc  CODE_OF_CONDUCT.md  README.md  SECURITY.md  biome.json  components.json  compose.yml  drizzle.config.ts  features.md  hash.ts  package.json  pnpm-lock.yaml  save.tsx  tsconfig.json  turbo.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
.husky/_/: pre-commit  prepare-commit-msg
app/: app.css  root.tsx  routes.ts  server.ts  sessions.server.ts
app/action/: access-request.action.server.ts  access-request.server.ts  activity.server.ts  auth.action.server.ts  auth.server.ts  directions.action.server.ts  email.action.server.ts  trashbins.action.server.ts  trashbins.action.ts  user.action.server.ts  user.server.ts
app/api/: middleware.server.ts
app/db/: index.ts
app/hooks/: use-action.ts  use-active-teams.ts  use-commments.ts  use-notifications.ts  use-pagination.ts
app/lib/: auth.server.ts  constants.ts  db.ts  email.ts  hash.server.ts  rpc.ts  seed.ts  sessions.server.ts  types.ts  utils.ts  validations.server.ts  ws.server.ts
app/loader/: auth.loader.server.ts  auth.server.ts  trashbins.loader.server.ts  users.server.ts
apps/iot/: pyproject.toml
apps/iot/src/: main.py  test-integ.py
apps/iot/src/lib/: battery.py  camera.py  helpers.py  mqtt_client.py  servo_motor.py  simulation.py  supabase.py  ultrasonic.py  yolo_detector.py
apps/iot/src/model/: metadata.yml  model.ncnn.py
config/: env.server.ts  env.ts
xml/: adminData.dtd  adminData.xml  adminData.xsl
(+678 files in other folders)
