[project]
name = "iot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "coloredlogs>=15.0.1",
    "dotenv>=0.9.9",
    "firebase-admin>=7.1.0",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "paho-mqtt>=2.1.0",
    "pigpio>=1.78",
    "smbus>=1.1.post2",
    "supabase>=2.23.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "ultralytics>=8.3.224",
]
